crates/oxc_react_compiler/tests/snapshots/error.invalid-known-incompatible-aliasing-function.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.invalid-known-incompatible-aliasing-function.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "Use of incompatible library", labels: [LabeledSpan { label: Some("knownIncompatibleAliasing is known to be incompatible"), span: Span { start: 117, end: 142 }, primary: true }], help: Some("This API returns functions which cannot be memoized without leading to stale UI. To prevent this, by default React Compiler will skip memoizing this component/hook. However, you may see issues if values from this API are passed to other components/hooks that are memoized"), note: Some("React Compiler skipped optimizing this component or hook"), severity: Warning, code: OxcCode { scope: Some("react-compiler"), number: Some("IncompatibleLibrary") }, url: Some("https://react.dev/reference/eslint-plugin-react-hooks/lints/incompatible-library") } }

No changes.
