crates/oxc_react_compiler/tests/snapshots/error.invalid-known-incompatible-hook.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.invalid-known-incompatible-hook.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] IncompatibleLibrary: Use of incompatible library", labels: [LabeledSpan { label: Some("useKnownIncompatible is known to be incompatible"), span: SourceSpan { offset: 112, length: 20 }, primary: false }], help: Some("This API returns functions which cannot be memoized without leading to stale UI. To prevent this, by default React Compiler will skip memoizing this component/hook. However, you may see issues if values from this API are passed to other components/hooks that are memoized"), note: None, severity: Warning, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
