crates/oxc_react_compiler/tests/snapshots/error.invalid-mutate-context.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.invalid-mutate-context.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Immutability: This value cannot be modified", labels: [LabeledSpan { label: Some("value cannot be modified"), span: Span { start: 72, end: 79 }, primary: false }], help: Some("Modifying a value returned from 'useContext()' is not allowed."), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
