crates/oxc_react_compiler/tests/snapshots/error.invalid-mutate-phi-which-could-be-frozen.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.invalid-mutate-phi-which-could-be-frozen.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Immutability: This value cannot be modified", labels: [LabeledSpan { label: Some("value cannot be modified"), span: Span { start: 171, end: 172 }, primary: false }], help: Some("Modifying a value returned from a hook is not allowed. Consider moving the modification into the hook where the value is constructed"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
