crates/oxc_react_compiler/tests/snapshots/error.invalid-mutate-props-in-effect-fixpoint.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.invalid-mutate-props-in-effect-fixpoint.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Immutability: This value cannot be modified", labels: [LabeledSpan { label: Some("`y` cannot be modified"), span: Span { start: 170, end: 171 }, primary: false }], help: Some("Modifying component props or hook arguments is not allowed. Consider using a local variable instead"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
